--- a/Adrianno/Makefile
+++ b/Adrianno/Makefile
@@ -1,15 +1,14 @@
-DIR = /opt/reativos
-DIR_LCC = ../
-CEU_DIR     = ../ceu
-CEU_SDL_DIR = ../ceu-sdl
+CEU_DIR     = $(error set absolute path to "<ceu>" repository)
+CEU_SDL_DIR = $(error set absolute path to "<ceu-sdl>" repository)
 
 game:
 	    ceu --pre --pre-args="-I$(CEU_DIR)/include -I$(CEU_SDL_DIR)/include" \
-	              --pre-input=teste2.ceu                                   \
+	              --pre-input=src/main.ceu                                   \
 	        --ceu --ceu-err-unused=pass --ceu-err-uninitialized=pass         \
+		  	  --ceu-features-thread=true						 \
 	        --env --env-types=$(CEU_DIR)/env/types.h                         \
 	              --env-threads=$(CEU_DIR)/env/threads.h                     \
 	              --env-main=$(CEU_DIR)/env/main.c                           \
 	        --cc --cc-args="-lm -llua5.3 -lpthread -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lSDL2_gfx" \
-	             --cc-output=/tmp/teste2.ceu;                                  \
-		/tmp/teste2.ceu;	                                                 \
+	             --cc-output=/tmp/R2L.ceu;                                  \
+		/tmp/R2L.ceu;	                                                 \
